# getting-started-with-thermal-imaging

./: .gitignore  COMPREHENSIVE-REVIEW.md  GITHUB-PAGES-DEPLOYMENT.md  GITHUB_PAGES_SETUP.md  PHASE3.md  README.md  index.html  plan.md
.github/workflows/: deploy-website.yml
assets/css/: main.css
data/: _template.yaml  build-metadata.json  datasets-cards.json
data/datasets/: faceoral.json  faceoral.yaml  kaggle-thermal.yaml  lwirpose.json  openthermalpose.yaml  test-dataset.json
thermal-imaging-package/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
thermal-imaging-package/src/thermal_imaging/: __init__.py
thermal-imaging-package/src/thermal_imaging/utils/: __init__.py
thermal-imaging-package/tests/: test_data_loader.py
website/: .gitignore  DATASET-ADDITION-GUIDE.md  PROJECT-COMPLETE.md  README.md  design.html  index.html  package.json  thermal-dataset-discovery.html  vite.config.js
website/assets/js/: app.js
website/data/: build-metadata.json  datasets-cards.json
website/data/datasets/: dmrir.json  dmrir.yaml  iphpdt.json  iphpdt.yaml  kaggle-thermal.json  lwirpose.yaml  mendeley.json  mendeley.yaml  openthermalpose.json  openthermalpose2.json  openthermalpose2.yaml  pop.json  pop.yaml  test-dataset.yaml
website/public/: index.html
website/scripts/: yaml-to-json.js
website/src/: App.vue
website/src/components/: DatasetCard.vue
